# STRATICA

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  generate_reports.sh  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload_stratica.py
.github/workflows/: docs.yml  tests.yml
config/: validation.yaml
docs/: STRATICA_Research_Paper.docx  conf.py  contact.rst  glossary.rst  index.md  index.rst  installation.rst  parameters.md  quick_start.rst  requirements.txt
docs/api/: core.rst  parameters.rst
docs/case_studies/: petm.rst
examples/: basic_analysis.py
report_generator/: generate_reports.py
reports/: README.md  archive_reports.sh  cleanup_reports.sh  latest_reports.sh
reports/alerts/: alerts_2026-03-03.json  alerts_2026-03-03.txt
reports/daily/: daily_2026-03-03.md  daily_2026-03-03.txt  report_2026-03-03.md  report_2026-03-03.txt
reports/monthly/: march_2026.md
reports/weekly/: week_10_2026.md
scripts/: download_data.sh  generate_api_docs.py
stratica/: __init__.py  __version__.py
stratica/api/: __init__.py  app.py  routes.py  schemas.py
stratica/core/: __init__.py  analyzer.py  tci_index.py
stratica/models/: __init__.py  backcast.py  microfossil_cnn.py  pinn.py  transformer_lstm.py
stratica/parameters/: __init__.py  base.py  cyclostratigraphy.py  geochemistry.py  isotope.py  lithological.py  magnetic.py  microfossil.py  palynology.py  thermal.py  varves.py
stratica/physics/: __init__.py  compaction.py  isotope_fractionation.py  milankovitch.py  sediment_transport.py
stratica/processing/: __init__.py  interpolation.py  normalization.py  preprocessing.py  quality_control.py
stratica/utils/: __init__.py  config.py  constants.py  io.py
stratica/visualization/: __init__.py  dashboard.py  plots.py  themes.py
tests/: conftest.py  test_simple.py
tests/integration/: test_full_pipeline.py  test_petm_case.py
tests/unit/: test_analyzer.py  test_cyclostratigraphy.py  test_geochemistry.py  test_isotope.py  test_lithological.py  test_magnetic.py  test_microfossil.py  test_palynology.py  test_tci_index.py  test_thermal.py  test_varves.py
