[metadata]
name = stratica
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
description = Stratigraphic Pattern Recognition & Paleoclimatic Temporal Reconstruction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://stratica.netlify.app
project_urls =
    Documentation = https://stratica.readthedocs.io
    Source = https://gitlab.com/gitdeeper8/STRATICA
    DOI = https://doi.org/10.5281/zenodo.18851076
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Geology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = MIT
keywords = stratigraphy, paleoclimatology, physics-informed neural networks, milankovitch cycles, deep-time, tci

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    xarray>=0.20.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    
    tensorflow>=2.8.0
    torch>=1.10.0
    transformers>=4.15.0
    astroquery>=0.4.0
    requests>=2.26.0
    pyyaml>=5.4.0
    click>=8.0.0
    rich>=10.0.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0
    isort>=5.0
    flake8>=4.0
    mypy>=0.900
    pre-commit>=2.0
docs =
    mkdocs>=1.3.0
    mkdocs-material>=8.0.0
    mkdocstrings>=0.19.0
    mike>=1.0.0

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
console_scripts =
    stratica = stratica.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -ra -q --strict-markers
